Ajout de 2 varaibles opacity & z-index, correction du scss pour prendre en charge c'est 2 variables, début de la nav bar, correction changement de section

--- a/src/components/layout/index.module.scss
+++ b/src/components/layout/index.module.scss
@@ -27,6 +27,7 @@
     justify-content: center;
     align-items: center;
     animation: fadeIn $text_animation ease-in-out;
+    z-index: $top_zindex;
 
     @media only screen and (max-width: $phone_width) {
       top: calc($layout_margin / 2);
