--- a/src/components/partials/Loader/index.module.scss
+++ b/src/components/partials/Loader/index.module.scss
@@ -16,7 +16,7 @@ $transparent_percentage: 2%;
   position: relative;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: $top_zindex;
 
   // Corner
   .loader_corner_right,
